--- a/UnitEdWPF/UnitEdWPF/MainWindow.xaml
+++ b/UnitEdWPF/UnitEdWPF/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="UnitEdWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Volcanis Unit Editor" Height="411" Width="275" ShowActivated="False">
+        Title="Volcanis Unit Editor" Height="411" Width="275" ShowActivated="False" Icon="/UnitEdWPF;component/Images/marine.png">
     <Grid Height="360">
         <Grid.RowDefinitions>
             <RowDefinition Height="22*" />
